# FiveLetters

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  README.md
.github/workflows/: tests.yml
adapters/: Cargo.toml
adapters/src/: sqlite.rs
cli/: Cargo.toml
cli/src/: main.rs
core/src/: entities.rs  interfaces.rs  lib.rs  services.rs  value_objects.rs
core/tests/: core.rs
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: dtos.rs  main.rs
lib/: CMakeLists.txt
lib/include/: constants.h  files.h  game.h
lib/src/: files.cpp  game.cpp  main.cpp
mock/: words.csv
src/: main.rs
src/adapters/: sqlite.rs
src/core/: entities.rs  interfaces.rs  mod.rs  services.rs  value_objects.rs
src/ui/: package-lock.json  package.json
src/ui/app/: globals.css  layout.tsx  mock.ts  page.module.css  page.tsx  types.d.ts
tests/: CMakeLists.txt  core.rs  files.cpp  game.cpp
ui/: package-lock.json  package.json
ui/app/: mock.ts  page.module.css  page.tsx
ui/src/: App.module.css  App.tsx  index.css  types.d.ts
